--- a/nuitka/plugins/standard/stdlib2.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/stdlib2.nuitka-package.config.yml
@@ -60,6 +60,10 @@
         "test": "'(lambda: None)'"
 
 - module-name: "Tkinter"
+  implicit-imports:
+    - depends:
+        - "_tkinter"
+
   options:
     checks:
       - macos_bundle_as_onefile: "yes"
